# 365cal-tui

./: .gitignore  Cargo.toml  GEMINI.md  LICENSE  README.md  calendar.ics
src/: api.rs  app.rs  auth.rs  config.rs  db.rs  main.rs  notifications.rs  tui.rs  ui.rs
src/ui/: calendar.rs  event.rs  mod.rs
