[package]
name = "o365cal-tui"
version = "1.0.0"
edition = "2021"

[dependencies]
# TUI Dependencies
ratatui = "0.27.0"
crossterm = "0.27.0"

# Runtime and HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication and Utilities
oauth2 = { version = "4.4.2", features = ["reqwest"] }
url = "2.5.2"
webbrowser = "1.0.1"
keyring = "2.3.2"
config = "0.14.0"
dirs = "5.0.1"
log = "0.4.22"
simple-logging = "2.0.2"
chrono = "0.4"
regex = "1.10.5"
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3"
